参数配置例子

--- a/index2.html
+++ b/index2.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>动画例子</title>
-
+    <title>Game Config</title>
     <script src="./js/phaser.js"></script>
-    <!-- <script src="./js/animation/pngSequence.js"></script> -->
     <script src="./js/gconf/baseConfig.js"></script>
 </head>
 <body>
+    
 </body>
 </html>
