--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <script src="./js/phaser.js"></script>
     <!-- <script src="./js/animation/pngSequence.js"></script> -->
-    <script src="./js/gconf/baseConfig.js"></script>
+    <!-- <script src="./js/gconf/baseConfig.js"></script> -->
+    <script src="./js/finddiff/index.js"></script>
 </head>
 <body>
 </body>
