--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./js/phaser.js"></script>
     <!-- <script src="./js/animation/pngSequence.js"></script> -->
     <!-- <script src="./js/gconf/baseConfig.js"></script> -->
-    <script src="./js/finddiff/index.js"></script>
+    <script src="./js/finddiff/diff.js"></script>
 </head>
 <body>
 </body>
